--- a/app/globals.css
+++ b/app/globals.css
@@ -510,7 +510,12 @@ button {
   font-weight: 500;
   color: #000;
 }
-
+.steps-content-box-left{
+padding-right: 19px;
+}
+.steps-content-box-right{
+padding-left: 19px;
+}
 .course-testimonial-role {
   font-family: var(--font-poppins), sans-serif;
   font-size: 12px;
@@ -626,6 +631,22 @@ button {
 
 .footer {
   background-image: url('/footer_bg.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: auto !important;
+  width: 100%;
+}
+.about-box-bg{
+   background-image: url('/mission_bg.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: auto !important;
+  width: 100%;
+}
+.contact-details{
+  background-image: url('/contactus_bg.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -1200,7 +1221,7 @@ button {
   .banner-text h1,
   .banner-text h2,
    .every {
-    font-size: 40px !important;
+    font-size: 30px !important;
   }
 
   .every-description{
@@ -1921,6 +1942,24 @@ button {
     height: auto !important;
     width: 100%;
   }
+  h2 span {
+    font-size: 24px !important;
+  }
+
+  h1 p {
+    font-size: 28px !important;
+  }
+
+    h1 {
+    font-size: 28px !important;
+  }
+
+  h2 {
+    font-size: 24px !important;
+  }
+  p {
+    font-size: 12px !important;
+  }
 
   .getin-touch {
     padding-bottom: 0 !important;
@@ -2431,17 +2470,15 @@ li {
 
 @media (max-width: 1510px) {
   .robot_center_image img {
-    width: 400px;
+    width: 100%;
     height: 400px;
-    margin-left: 20px;
   }
 }
 
 @media (max-width: 1139px) {
   .robot_center_image img {
-    width: 300px;
+    width: 100%;
     height: 300px;
-    margin-left: 20px;
   }
 
   .why_choose_right {
@@ -2461,15 +2498,14 @@ li {
 
 @media (min-width: 1512px) and (max-width: 1919px) {
   .robot_center_image img {
-    width: 400px;
+    width: 100%;
     height: 400px;
-    margin-left: 20px;
   }
 }
 
 @media (max-width: 1139px) {
   .robot_center_image img {
-    width: 340px !important;
+    width: 100% !important;
     height: 340px !important;
     padding-left: -5px;
   }
@@ -2477,16 +2513,14 @@ li {
 
 @media (max-width: 1319px) {
   .robot_center_image img {
-    width: 400px;
+    width: 100%;
     height: 400px;
-    margin-left: 20px;
   }
 }
 
 @media (max-width: 1170px) {
   .robot_center_image img {
-    width: 380px;
-    margin-left: 30px;
+    width: 100%;
   }
 }
 
@@ -2848,16 +2882,14 @@ li {
 
 @media (max-width: 1319px) {
   .robot_center_image img {
-    width: 400px;
+    width: 100%;
     height: 400px;
-    margin-left: 20px;
   }
 }
 
 @media (max-width: 1170px) {
   .robot_center_image img {
-    width: 380px;
-    margin-left: 30px;
+    width: 100%;
   }
 }
 
@@ -4005,10 +4037,37 @@ li {
 }
 
 @media (max-width: 1138px) and (min-width: 768px) {
-.robo-anim{
-  width: 37%;
-  height: 58%;
-  margin-top: -50px;
-  margin-left: -17px;
+.robo-anim {
+	width: 42%;
+	height: 58%;
+	margin-top: -50px;
 }
 }
+
+@media screen and (min-width: 1918px) {
+  .robo-anim   {
+    margin-top: 5px !important;
+  }
+}
+@media screen and (min-width: 1172px) and (max-width: 1310px) {
+    .robo-anim   {
+    margin-left: 10px !important;
+  }
+  
+}
+@media screen and (min-width: 1024px) and (max-width: 1172px) {
+    .robo-anim   {
+    	margin-left: 32px;
+	width: 42%;
+  }
+  
+}
+
+@media screen and (min-width: 1140px) and (max-width: 1172px) {
+    .robo-anim   {
+    margin-left: 37px;
+	width: 48%;
+  }
+  
+}
+
